--- a/1 Trimestre/Ing Software I/pagina_ejemplo/index.html
+++ b/1 Trimestre/Ing Software I/pagina_ejemplo/index.html
@@ -10,7 +10,7 @@
 <body>
 <div class="container mt-3">
 <div class="alert alert-success">
-<h1>Bienvenidos a versionamiento con el profe leo</h1>
+<h1>Bienvenidos aprendices de la ficha 3065835 - 2</h1>
 </div>
 <!-- Carousel -->
 <div id="demo" class="carousel slide" data-bs-ride="carousel">
